--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,18 +6,20 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" scrollTracker (scroll)="LoadMoreData($event)">
+<ion-content [fullscreen]="true" scrollTracker>
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
 
-
-  <ion-card *ngFor="let item of imageList; let i = index" (click)="clickHandler(item, i)">
-    <img src="{{item.url}}" />
-    <ion-card-header>
-      <ion-card-title>{{item.title}}</ion-card-title>
-    </ion-card-header>
-  </ion-card>
+  <ion-virtual-scroll [items]="imageList" approxItemHeight="320px">
+    <ion-card *virtualItem="let item; let itemBounds = bounds; let i = index" (click)="clickHandler(item, i)">
+      <ion-img [src]="item.url" height="120px" [alt]="item.title"></ion-img>
+      <ion-card-header>
+        <ion-card-title>{{ item.url }}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>{{ item.title }}</ion-card-content>
+    </ion-card>
+  </ion-virtual-scroll>
 </ion-content>
